feat(aip_datasource): optimize AIPs retrieval for aspiration REGARDS-264